smaller font in monitor and smaller resource conf field to avoid page overflow on 1024xwhatever displays
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@243 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/migcss.css
+++ b/mig/images/migcss.css
@@ -110,7 +110,7 @@ ul#mignavlist {
 }
 
 #mignavlist a {
-	padding: 4px 6px;
+	padding: 0px 6px;
 }
 
 #mignavlist a:link, #navlist a:visited {
@@ -249,6 +249,7 @@ table.monitor {
 	width: 98%;
         background: #eee;
 	border: 1px solid #000;
+	font-size: 10px;
 }
 table.monitorstats {
 	width: 98%;
